sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:14: error: ';' expected but 'if' found.
				} if (nb == 0) {
                                  ^